--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
       <a class="navbar-brand js-scroll-trigger" href="#page-top">
-        <span class="d-block d-lg-none">Edison Andrade</span>
+        <span class="d-block d-lg-none">Edison Marinho</span>
         <span class="d-none d-lg-block">
           <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/andre.jpg" alt="">
         </span>
@@ -69,7 +69,7 @@
       <section class="resume-section p-3 p-lg-5 d-flex d-column" id="about">
         <div class="my-auto">
           <h1 class="mb-0">Edison
-            <span class="text-primary">Andrade</span>
+            <span class="text-primary">Marinho</span>
           </h1>
           <div class="subheading mb-5">Rua Padre Zeferino do Carmo, 256 - São Paulo - SP. (11) 972994237·
             <a href="mailto:name@email.com">edisonmarinho@gmail.com</a>
@@ -125,7 +125,7 @@
               <div class="subheading mb-3">KBC GAMES</div>
               <p class="text-justify">
                 <ul>
-                  <li class="text-justify">Gerenciamento do site: www.kbcgames.com.br, (Plataforma Tray e Commeceplus,    Marketplace Amazon, B2W, Walmart, Carrefour e Mercado Livre);</li>
+                  <li class="text-justify">Gerenciamento do site: www.kbcgames.com.br, (Plataforma Tray e Commeceplus, Marketplace Amazon, B2W, Walmart, Carrefour e Mercado Livre);</li>
                   <li class="text-justify">Controle de Estoque;</li>
                   <li class="text-justify">Gestão de Cadastro e Ativação de Novos Produtos;</li>
                   <li class="text-justify">Faturamento de Pedidos;</li>
